openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-automation-service
  labels:
    app: platform-automation
spec:
  type: ClusterIP
  selector:
    app: platform-automation
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
